<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="56dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/unique_text"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="15dp"
            android:background="@drawable/edittext_bd"
            android:gravity="top|start"
            android:hint="@string/tip_3"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textColorHint="@color/lightgray"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@drawable/edittext_normal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/suffix"
                android:textSize="18sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/unique_suffix"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="15sp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:entries="@array/encode_array" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@drawable/edittext_normal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/result"
                android:textSize="18sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/unique_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:entries="@array/encode_array" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <Button
                android:id="@+id/unique_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_radius_gray"
                android:text="@string/clear_text"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/unique_judge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:background="@drawable/btn_radius_red"
                android:text="@string/judge"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>